# mycalc

./: .gitignore  CMakeLists.txt
.backup/.vscode__/: launch.json  tasks.json
app/: main.cpp
code/: mycalc.cpp  mycalc.h
tests/: CMakeLists.txt  test1.cpp  test_mycalc.cpp
